# pygreeks

./: README.md  pyproject.toml
pygreeks/: __init__.py  pygreeks.py
