[tool.poetry]
name = "pygreeks"
version = "2.0.1"
description = "Calculate accurate greeks and IV with torch autograd or fast numeric approximation"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
# Note: the python <3.10 version requirement is only because scipy requires
#       such specific version limits currently.
python = ">=3.7,<3.10"
torch = "^1.7.1"
py_vollib = "^1.0.1"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
