[tool.poetry]
name = "pygreeks"
version = "3.0.6"
description = "Calculate accurate greeks and IV with torch autograd or fast numeric approximation"
authors = ["Matt Stancliff <matt@genges.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9"
torch = "^2.0"
py_vollib = "^1.0.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
